--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .DS_Store
 node_modules
 /dist
+package-lock.json
+yarn.lock
 
+.gitignore
 # local env files
 .env.local
 .env.*.local
@@ -19,3 +22,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+src/filters/localize.filter.js
+src/locales/
+src/plugins/title.plugin.js
